<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".Activitys.MainActivity">

    <TextView
        android:id="@+id/easyCalculator_tv_result"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/easy_calculator_background_edittext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/easyCalculator_ed_num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:hint="@string/number_1"
        android:autofillHints="none"
        android:inputType="number"
        android:background="@drawable/easy_calculator_background_edittext"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintTop_toBottomOf="@id/easyCalculator_tv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/easyCalculator_ed_num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:hint="@string/number_2"
        android:autofillHints="none"
        android:inputType="number"
        android:background="@drawable/easy_calculator_background_edittext"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintTop_toBottomOf="@id/easyCalculator_ed_num1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="16dp"
        android:orientation="horizontal"
        android:elevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/easyCalculator_ed_num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/easyCalculator_btn_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sum"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:elevation="12dp"
            android:background="@drawable/easy_calculator_background_edittext" />

        <Button
            android:id="@+id/easyCalculator_btn_subtraction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sub"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:elevation="12dp"
            android:background="@drawable/easy_calculator_background_btn_sum" />

        <Button
            android:id="@+id/easyCalculator_btn_multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/mul"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:elevation="12dp"
            android:background="@drawable/easy_calculator_background_edittext" />

        <Button
            android:id="@+id/easyCalculator_btn_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/div"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:elevation="12dp"
            android:background="@drawable/easy_calculator_background_btn_sum" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/outline_calculate_24"
        android:background="@drawable/easy_calculator_background_btn_sum"
        android:text="@string/calculating_the_area_of_geometric_shapes"
        app:layout_constraintTop_toBottomOf="@+id/buttonsBar"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginHorizontal="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>