<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/easy_calculator_background_screen"
    tools:context=".Activitys.Areas">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinar_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/easy_calculator_background_edittext"
        android:elevation="12dp"
        android:popupBackground="@drawable/spinner_dropdown_background"
        android:entries="@array/shapes"
        android:theme="@style/SpinnerCustomTheme"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:id="@+id/linier1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinar_shapes"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_ed_rectangle_width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/outline_width_full_24"
            android:drawablePadding="10dp"
            android:background="@drawable/easy_calculator_background_edittext"
            android:autofillHints="none"
            android:hint="@string/width"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/areas_ed_rectangle_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:drawableStart="@drawable/outline_height_24"
            android:drawablePadding="10dp"
            android:background="@drawable/easy_calculator_background_edittext"
            android:paddingHorizontal="10dp"
            android:autofillHints="none"
            android:hint="@string/height"
            android:textColorHint="@color/text_color_hint"
            android:inputType="number" />


    </LinearLayout>

    <EditText
        android:id="@+id/areas_ed_circle_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linier1"
        android:ems="10"
        android:textColor="@color/white"
        android:background="@drawable/easy_calculator_background_edittext"
        android:autofillHints="none"
        android:layout_margin="20dp"
        android:hint="@string/radius"
        android:textColorHint="@color/text_color_hint"
        android:padding="16dp"
        android:paddingHorizontal="10dp"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/linier2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areas_ed_circle_radius">

        <EditText
            android:id="@+id/areas_ed_triangle_base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/base_24px"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/easy_calculator_background_edittext"
            android:autofillHints="none"
            android:hint="@string/base"
            android:textColorHint="@color/text_color_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/areas_ed_triangle_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/outline_height_24"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:background="@drawable/easy_calculator_background_edittext"
            android:autofillHints="none"
            android:paddingHorizontal="10dp"
            android:hint="@string/height"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linier2">

        <Button
            android:id="@+id/areas_btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/areas_background_btn_calculate"
            android:drawableStart="@drawable/outline_calculate_24"
            android:elevation="1dp"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/areas_tv_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/easy_calculator_background_edittext"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>